--- a/indexFAQ.html
+++ b/indexFAQ.html
@@ -2,97 +2,97 @@
 <html lang="en" >
 
 <head>
-  <meta charset="UTF-8">
-  <title>FAQ</title>
-  
-  
-  <link rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'>
+    <meta charset="UTF-8">
+    <title>FAQ</title>
 
-      <link rel="stylesheet" href="css/style.css">
-      <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  
+    <link rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+
 </head>
- <body class=" section-grbacolor">
-  <div class="col-lg-6">
-  <div class="accordion">
-    <div class="accordion-item accordion-text">
-      <a>我需要付多少行政費才能參加海外成長專案?</a>
-      <div class="content">
-        <p>這要依照您選擇的國家所更動。</p>
-      </div>
-    </div>
-    <div class="accordion-item accordion-text">
-      <a>我所付的行政費是否包含我抵達專案地點的費用?</a>
-      <div class="content">
-        <p>否，您需要自行去訂購機票，辦理簽證及保險，但這些流程我們的專員都會協助您去完成。</p>
-      </div>
-    </div>
-    <div class="accordion-item accordion-text">
-      <a>請問海外成長專案為期多久?</a>
-      <div class="content">
-        <p>我們大部分提供的專案為期6到8週。</p>
-      </div>
-    </div>
-    <div class="accordion-item accordion-text">
-      <a>參加海外成長的條件為何?</a>
-      <div class="content">
-        <li>18 至 30歲間。</li>
-        <li>英文程度須達一定標準。(可流利地以英文與他人對話)</li>
-      </div>
-    </div>
-    <div class="accordion-item accordion-text">
-      <a>我在專案地點該與誰聯絡?</a>
-      <div class="content">
-        <p>在您出發參與專案之前，專案國家將會有專人提供您任何您需要的協助。</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="col-lg-6 ">
-<div class="accordion">
-    <div class="accordion-item accordion-text">
-      <a>在我出發參與專案前，我需要準備那些文件?</a>
-      <div class="content">
-        <p>不同國家有不同的要求，不過您會需要的有護照與邀請函。</p>
-      </div>
-    </div>
-    <div class="accordion-item accordion-text">
-      <a>請問專案是支薪的嗎?</a>
-      <div class="content">
-        <p>沒，你他媽想太多。</p>
-      </div>
-    </div>
-    <div class="accordion-item accordion-text">
-      <a>請問專案會提供住宿與食物嗎?</a>
-      <div class="content">
-        <p>大部分專案會提供，若有更動，將會事前告知。</p>
-      </div>
-    </div>
-    <div class="accordion-item accordion-text">
-      <a>參加海外成長的篩選步驟為何?</a>
-      <div class="content">
-        <p>您必須先申請專案，通過面試後即可立即出發。</p>
-      </div>
-    </div>
-    <div class="accordion-item accordion-text">
-      <a>請問在台灣有多少分會我可以做諮詢?</a>
-      <div class="content">
-        <p>我們在台有17個分會:)有空再跟你說。</p>
-      </div>
-    </div>
-  </div>
-</div>
+
+<body class="section-grbacolor">
    
-  <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
+    <div class="col-lg-6 flaot_lf">
+        <div class="accordion">
+            <div class="accordion-item accordion-text">
+                <a>我需要付多少行政費才能參加海外成長專案?</a>
+                <div class="content">
+                    <p>這要依照您選擇的國家所更動。</p>
+                </div>
+            </div>
+            <div class="accordion-item accordion-text">
+                <a>我所付的行政費是否包含我抵達專案地點的費用?</a>
+                <div class="content">
+                    <p>否，您需要自行去訂購機票，辦理簽證及保險，但這些流程我們的專員都會協助您去完成。</p>
+                </div>
+            </div>
+            <div class="accordion-item accordion-text">
+                <a>請問海外成長專案為期多久?</a>
+                <div class="content">
+                    <p>我們大部分提供的專案為期6到8週。</p>
+                </div>
+            </div>
+            <div class="accordion-item accordion-text">
+                <a>參加海外成長的條件為何?</a>
+                <div class="content">
+                    <li>18 至 30歲間。</li>
+                    <li>英文程度須達一定標準。(可流利地以英文與他人對話)</li>
+                </div>
+            </div>
+            <div class="accordion-item accordion-text">
+                <a>我在專案地點該與誰聯絡?</a>
+                <div class="content">
+                    <p>在您出發參與專案之前，專案國家將會有專人提供您任何您需要的協助。</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6 float_rt">
+        <div class="accordion">
+            <div class="accordion-item accordion-text">
+                <a>在出發參與專案前，需要準備那些文件?</a>
+                <div class="content">
+                    <p>不同國家有不同的要求，不過您會需要的有護照與邀請函。</p>
+                </div>
+            </div>
+            <div class="accordion-item accordion-text">
+                <a>請問專案是支薪的嗎?</a>
+                <div class="content">
+                    <p>沒有，志工專案皆為不支薪。</p>
+                </div>
+            </div>
+            <div class="accordion-item accordion-text">
+                <a>請問專案會提供住宿與食物嗎?</a>
+                <div class="content">
+                    <p>大部分專案會提供，若有更動，將會事前告知。</p>
+                </div>
+            </div>
+            <div class="accordion-item accordion-text">
+                <a>參加海外成長的篩選步驟為何?</a>
+                <div class="content">
+                    <p>您必須先申請專案，通過面試後即可立即出發。</p>
+                </div>
+            </div>
+            <div class="accordion-item accordion-text">
+                <a>請問在台灣有多少分會我可以做諮詢?</a>
+                <div class="content">
+                    <p>我們在台有16個分會。</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-  
-
-    <script  src="js1/index.js"></script>
+    <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
 
 
 
+    <script src="js/index.js"></script>
 
-</body>
 
-</html>
+
+
+</body></html>
