--- a/indexOGV.html
+++ b/indexOGV.html
@@ -26,8 +26,9 @@
 
     <!-- Custom styles for this template -->
     <link href="css2/creative.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css1/animate.css">
-	<link rel="stylesheet" href="css1/footer-distributed-with-address-and-phones.css">
+     <link href="css/creative.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
 
 
 	
@@ -343,7 +344,7 @@
             <p class="section-heading wow fadeInDown section-title">常見問與答</p>
             <br><br>
         </div>
-   <iframe src="indexFAQ_GT.html" width="100%" height="450px" frameborder="0" scrolling="yes"></iframe>
+   <iframe src="indexFAQ.html" width="100%" height="450px" frameborder="0" scrolling="yes"></iframe>
    </div>
    </div>
    </section>
@@ -432,8 +433,8 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js1/creative.min.js"></script>
-    <script src="js1/wow.min.js"></script>
+    <script src="js/creative.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script>
     new WOW().init();
     </script>
