--- a/indexFAQ_GT.html
+++ b/indexFAQ_GT.html
@@ -8,7 +8,7 @@
   
   <link rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'>
 
-      <link rel="stylesheet" href="css1/style.css">
+      <link rel="stylesheet" href="css/style.css">
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   
