--- a/indexOGE.html
+++ b/indexOGE.html
@@ -25,7 +25,7 @@
     <!-- Custom styles for this template -->
     <link href="css2/creativeoge.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css1/animate.css">
-	<link rel="stylesheet" href="css1/footer-distributed-with-address-and-phones.css">
+	<link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
 
 
 	
@@ -440,8 +440,8 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js1/creative.min.js"></script>
-    <script src="js1/wow.min.js"></script>
+    <script src="js/creative.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script>
     new WOW().init();
     </script>
