--- a/indexOGT.html
+++ b/indexOGT.html
@@ -23,9 +23,9 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css2/creative.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css1/animate.css">
-	<link rel="stylesheet" href="css1/footer-distributed-with-address-and-phones.css">
+    <link href="css/ogt.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
 
 
 	
@@ -352,7 +352,7 @@
             <p class="section-heading wow fadeInDown section-title">常見問與答</p>
             <br><br>
         </div>
-   <iframe src="indexFAQ_GT.html" width="100%" height="450px" frameborder="0" scrolling="yes"></iframe>
+   <iframe src="indexFAQ.html" width="100%" height="450px" frameborder="0" scrolling="yes"></iframe>
    </div>
    </div>
    </section>
@@ -441,8 +441,8 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js1/creative.min.js"></script>
-    <script src="js1/wow.min.js"></script>
+    <script src="js/creative.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script>
     new WOW().init();
     </script>
