--- a/indexOGV.html
+++ b/indexOGV.html
@@ -25,7 +25,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css2/creative.min.css" rel="stylesheet">
+    <link href="css/ogv.css" rel="stylesheet">
      <link href="css/creative.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
