--- a/indexOGE.html
+++ b/indexOGE.html
@@ -23,8 +23,8 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css2/creativeoge.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css1/animate.css">
+    <link href="css/oge.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
 
 
@@ -276,63 +276,7 @@
         </div>
       </div>
     </section>
-<!-- 這邊是精選專案跑馬燈-->
-   
-<!--
-    <section class="p-3 section-whbacolor" id="portfolio">
-    <div class="project section-whbacolor" style="margin-top:4rem;padding-bottom: 10rem">
-      <div class="section-whbacolor">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <p class="section-heading wow fadeInDown section-title">推薦機會</p>
-          </div>
-        </div>
-<br><br>
-       <div id="carouselExampleIndicators" class="carousel slide container wow fadeIn" data-ride="carousel" data-wow-delay="0.5s">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active pro-img">
-      <img class="d-block w-100" src="img1/DSCF6460.JPG" alt="First slide" >
-      <div class="carousel-caption d-none d-block">
-    <h1 align="center" class="labal-img pro-text-nepal">尼泊爾專案</h1>
-  </div>
-    </div>
-    <div class="carousel-item pro-img">
-      <img class="d-block w-100" src="img1/indoniesia2.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-block">
-    <h1 align="center" class="labal-img pro-text-indoniesia">印尼專案</h1>
-  </div>
-    </div>    
-     <div class="carousel-item pro-img">
-      <img class="d-block w-100" src="img1/columbia1.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-block">
-    <h1 align="center" class="labal-img pro-text-columbia">哥倫比亞專案</h1>
-  </div>
-    </div>
-    <div class="carousel-item pro-img">
-      <img class="d-block w-100" src="img1/maxi.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-block">
-    <h1 align="center" class="labal-img pro-text-maxico">墨西哥專案</h1>
-  </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-        </div>
-    </div>
--->
+
       <div class="text-center section-whbacolor">
      
           <div class="col-lg-12 text-center">
@@ -351,7 +295,7 @@
             <p class="section-heading wow fadeInDown section-title">常見問與答</p>
             <br><br>
         </div>
-   <iframe src="indexFAQ_GT.html" width="100%" height="450px" frameborder="0" scrolling="yes"></iframe>
+   <iframe src="indexFAQ.html" width="100%" height="450px" frameborder="0" scrolling="yes"></iframe>
    </div>
    </div>
    </section>
