--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           </div>
           </div>
           <div class="col-lg-4 wow fadeInRightBig" data-wow-delay="0.6s">
-            <img src="img/DSCF6039.JPG" height="80%" width="80%" class="news-photo">
+<!--            <img src="img/DSCF6039.JPG" height="80%" width="80%" class="news-photo">-->
        
           </div>
 <!--消息1 結束-->
