--- a/indexFAQ.html
+++ b/indexFAQ.html
@@ -21,19 +21,19 @@
             <div class="accordion-item accordion-text">
                 <a>我需要付多少行政費才能參加海外成長專案?</a>
                 <div class="content">
-                    <p>這要依照您選擇的國家所更動。</p>
+                    <li>這要依照您選擇的國家所更動。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>我所付的行政費是否包含我抵達專案地點的費用?</a>
                 <div class="content">
-                    <p>否，您需要自行去訂購機票，辦理簽證及保險，但這些流程我們的專員都會協助您去完成。</p>
+                    <li>否，您需要自行去訂購機票，辦理簽證及保險，但這些流程我們的專員都會協助您去完成。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>請問海外成長專案為期多久?</a>
                 <div class="content">
-                    <p>我們大部分提供的專案為期6到8週。</p>
+                    <li>我們大部分提供的專案為期6到8週。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
@@ -46,7 +46,7 @@
             <div class="accordion-item accordion-text">
                 <a>我在專案地點該與誰聯絡?</a>
                 <div class="content">
-                    <p>在您出發參與專案之前，專案國家將會有專人提供您任何您需要的協助。</p>
+                    <li>在您出發參與專案之前，專案國家將會有專人提供您任何您需要的協助。</li>
                 </div>
             </div>
         </div>
@@ -56,31 +56,31 @@
             <div class="accordion-item accordion-text">
                 <a>在出發參與專案前，需要準備那些文件?</a>
                 <div class="content">
-                    <p>不同國家有不同的要求，不過您會需要的有護照與邀請函。</p>
+                    <li>不同國家有不同的要求，不過您會需要的有護照與邀請函。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>請問專案是支薪的嗎?</a>
                 <div class="content">
-                    <p>沒有，志工專案皆為不支薪。</p>
+                    <li>沒有，志工專案皆為不支薪。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>請問專案會提供住宿與食物嗎?</a>
                 <div class="content">
-                    <p>大部分專案會提供，若有更動，將會事前告知。</p>
+                    <li>大部分專案會提供，會依照專案條件作變動，若有更動，將會事前告知。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>參加海外成長的篩選步驟為何?</a>
                 <div class="content">
-                    <p>您必須先申請專案，通過面試後即可立即出發。</p>
+                    <li>您必須先申請專案，通過面試後即可立即出發。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>請問在台灣有多少分會我可以做諮詢?</a>
                 <div class="content">
-                    <p>我們在台有16個分會。</p>
+                    <li>我們在台有16個分會。</li>
                 </div>
             </div>
         </div>
