--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <section id="project">
 
         <div class="container">
-            <h2 class="" align="center">您可選擇的專案</h2>
+            <h2 align="center">您可選擇的專案</h2>
             <br>
             <div class="row">
 
