--- a/indexOGT.html
+++ b/indexOGT.html
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <p class="section-heading wow fadeInDown section-title">你可以獲得什麼</p>
+            <p class="section-heading wow fadeInDown section-title ogvinfo-title">你可以獲得什麼</p>
           </div>
         </div>
       </div>
