--- a/indexOGV.html
+++ b/indexOGV.html
@@ -34,12 +34,16 @@
     <link href="css/creative.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
-    <!--<link href="css/navbar.css" rel="stylesheet">-->
+
 
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+    
+<!-- airtable -->
+    <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
+    <script src="node_modules/airtable/build/airtable.browser.js"></script>
 
 
 </head>
