--- a/indexOGT.html
+++ b/indexOGT.html
@@ -109,7 +109,7 @@
                         <iframe width="50%" height="50%" src="https://www.youtube.com/embed/myVpaKuER-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-xl-5">
+                <div class="col-xl-6">
                     <div class="text-black-50 ">
 
                         <p class="ogvinfo-title sr-contact-1" style="font-weight: bold">透過海外實習來認識自己。</p>
@@ -149,49 +149,6 @@
                 </div>
                 <a>提供海外成長專以來</a><br>
                 <a>所有達成的人數</a>
-            </div>
-            <div>
-            </div>
-        </div>
-
-    </div>
-    <!-- 可以從海外實習獲得什麼-->
-    <section id="services" class="section-whbacolor why-choose-text">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p class="section-heading wow fadeInDown section-title ogvinfo-title">你可以獲得什麼</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <div class="count-font section-count">
-        <div class="stat-wrap wow fadeIn" style="margin-bottom: 0px;background-color: #0A8Ea0">
-            <div></div>
-            <div align=center>
-                <div class="inline-flag">
-                    <span class="stat-number mainNav">100</span>
-                    <font size="6px">+</font>
-                </div>
-                <a>2017年達成的海外實習</a>
-            </div>
-            <div align=center>
-                <div class="inline-flag">
-                    <span class="stat-number">300</span>
-                    <font size="6px">+</font>
-                </div>
-                <a>全球合作公司數</a>
-            </div>
-            <div align=center>
-
-                <div class="inline-flag">
-                    <span class="stat-number">9000</span>
-                    <font size="6px">+</font>
-                </div>
-                <a>參與海外實習專案人數</a>
             </div>
             <div>
             </div>
@@ -272,7 +229,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img1/Safe-Living-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        <img src="img/Safe-Living-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
                     </div>
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">安全的生活條件</h3>
@@ -282,7 +239,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img1/Learning-Experience-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        <img src="img/Learning-Experience-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
                     </div>
                     <div class="service-box mt-2 mx-auto">
 
@@ -293,7 +250,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img1/Clear-JD.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        <img src="img/Clear-JD.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
                     </div>
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">清楚的工作說明</h3>
@@ -303,7 +260,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img1/Logistic-Support.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        <img src="img/Logistic-Support.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
                     </div>
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">實質上的幫助</h3>
@@ -321,7 +278,7 @@
             <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.3s">如何參與專案</p>
 
         </div>
-        <img src="img1/process2.png" width="60%" height="60%" style="margin-top: 4rem">
+        <img src="img/process2.png" width="60%" height="60%" style="margin-top: 4rem">
     </div>
     <br><br><br><br><br>
 
