0825 airtable javascript testing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </button>
             <div class="collapse navbar-collapse nav-font" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-<!--
+                    <!--
                     <li class="nav-item dropdown">
                         <a class="nav-link js-scroll-trigger">
                             青年參與計畫<i class="fa fa-caret-down"></i></a>
@@ -115,14 +115,14 @@
                     <h1 align=center class="text-uppercase animated zoomIn header-font font-size" style="animation-duration: 1s;animation-delay: 1s">
                         <br><br>
                         <strong id="title_head">
-                            <!--                                                    青年創造影響力的起點-->
-                        </strong>
+<!--                            青年創造影響力的起點 -->
+                            </strong>
                     </h1>
                     <br>
                 </div>
                 <div class="col-lg-12 animated fadeInDown" style="animation-duration: 1s; animation-delay: 1.5s;animation-delay: 1.5s">
                     <p align="center" class="font-size" id="info_head">
-                        <!--                        我們相信一個人微小的行動能夠影響一件事情，<br>而一群人就能夠改變台灣、改變世界。-->
+<!--                        我們相信一個人微小的行動能夠影響一件事情，<br>而一群人就能夠改變台灣、改變世界。-->
                         <br><br>
                     </p>
                 </div>
@@ -534,6 +534,8 @@
                 `<a>${record.fields.data_info}</a>`
             );
         });
+        
+        var TEST ='123';
 
     </script>
 </body>
