--- a/indexOGV.html
+++ b/indexOGV.html
@@ -97,7 +97,7 @@
                 <div class="col-lg-12">
                     <h1 align=center class="text-uppercase animated zoomIn header-font fontsize" style="animation-duration: 1s;animation-delay: 1s">
                         <strong id="title-ogv">
-                            <!--                        成為你想看見的改變-->
+                            成為你想看見的改變
                         </strong>
                     </h1>
                     <br>
@@ -105,9 +105,9 @@
                 <div class="col-lg-12 animated fadeInDown" style="animation-duration: 1s; animation-delay: 1.5s;animation-delay: 1.5s">
 
                     <p align=center class="fontsize" id="info-ogv">
-                        <!--                       即便再微小的行動，都能在他人的心中種下改變的種子<br><br>而我們都能成為影響力的散播者-->
+                        即便再微小的行動，都能在他人的心中種下改變的種子<br><br>而我們都能成為影響力的散播者
                     </p>
-             
+
                     <a align=left class="btn btn-xl btn-header js-scroll-trigger" href="#video">瀏覽精選志工專案</a>
                 </div>
             </div>
@@ -410,6 +410,7 @@
         new WOW().init();
 
     </script>
+<!--
     <script>
         var Airtable = require('airtable');
         var base = new Airtable({
@@ -431,6 +432,7 @@
         });
 
     </script>
+-->
 
 </body>
 
