--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <!--    air table-->
+
     <script src="node_modules/airtable/build/airtable.browser.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
@@ -336,7 +337,7 @@
                 </div>
             </div>
             <div class="col-lg-4 wow fadeInRightBig" data-wow-delay="0.6s">
-                <img src="img/DSCF6039.JPG" height="80%" width="80%" class="news-photo">
+                <img src="img/Hradec%20Kr%C3%A1lov%C3%A9,%20Czechia.jpg" height="80%" width="80%" class="news-photo">
 
             </div>
 
