0826 airtable all connected

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <title>AIESEC in Taiwan</title>
 
@@ -489,8 +490,9 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/creative.min.js"></script>
     <script src="js/wow.min.js"></script>
+
+    <script src="js/creative.min.js"></script>
     <script>
         new WOW().init();
 
