--- a/indexOGE.html
+++ b/indexOGE.html
@@ -30,11 +30,14 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
 
-
-
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+    
+        <!--    air table-->
+    <script src="node_modules/airtable/build/airtable.browser.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 
 </head>
@@ -101,8 +104,9 @@
 
                     <p class="fontsize" id="info-oge">
                         <!--                       Global Entrepreneur is an internship experience where young people can explore<br><br>learn and contribute to the entrepreneurial world.-->
+                        </p>
                         <br><br><br>
-                        <a align=left class="btn btn-primary btn-xl js-scroll-trigger" href="#video">了解更多</a></p>
+                        <a align=left class="btn btn-primary btn-xl js-scroll-trigger" href="#video">了解更多</a>
                 </div>
             </div>
             <br>
