--- a/indexOGE.html
+++ b/indexOGE.html
@@ -30,18 +30,20 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
-    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     
         <!--    air table-->
     <script src="node_modules/airtable/build/airtable.browser.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 
 </head>
-
+<div id="overlay">
+    <div class="spinner"></div>
+</div>
 <body id="page-top">
 
     <!-- Navigation -->
