--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
                 <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn">
                     <div class="card h-100">
-                        <a href="indexOGV.html"><img class="card-img-top" src="img/students-gv.jpg" alt=""></a>
+                        <a href="indexOGV.html"><img class="card-img-top" src="img/webp/students-gv.webp" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="indexOGV.html"><img src="img/Global_Volunteer.png" width="50%" height="50%"></a>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn">
                     <div class="card h-100">
-                        <a href="#"><img class="card-img-top" src="img/students-gt.jpg" alt=""></a>
+                        <a href="#"><img class="card-img-top" src="img/webp/students-gt.webp" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="indexOGT.html"><img src="img/Global_talent.png" width="50%" height="50%"></a>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn">
                     <div class="card h-100">
-                        <a href="indexOGE.html"><img class="card-img-top" src="img/students-ge.jpg" alt=""></a>
+                        <a href="indexOGE.html"><img class="card-img-top" src="img/webp/students-ge.webp" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="#"><img src="img/Global_Entrepreneur.png" width="50%" height="50%"></a>
@@ -273,7 +273,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/un.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                        <img src="img/webp/un.webp" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
                     <div class="service-box mt-5 mx-auto">
                         <h3 class="mb-3">與聯合國簽署獨家合作</h3>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/leadership.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                        <img src="img/webp/leadership.webp" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
                     <div class="service-box mt-5 mx-auto">
 
@@ -294,7 +294,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/network.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                        <img src="img/webp/network.webp" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
                     <div class="service-box mt-5 mx-auto">
                         <h3 class="mb-3">建立國際人脈連結</h3>
